#+STARTUP: showeverything
* High-level list of changes
** Bug fixes
** Feature changes
*** On the Client detail page, there is a new checkbox, below "Verified", that says "Require new USDA signature". Checking this box and then Save will force a new signature to be obtained on the Greeter page.
*** Pop-up confirmations on the Greeter page use a larger font, so they are easier to read.
*** Cancel, Not Eligible, Paper Signature, and Clear buttons all use a large font (the same size as Save, but not bold like Save), so they are easier to read.
* Upgrade procedures
** Shut down and back up production
** Iterations
*** #1: copy db from production to bcp-test
*** #2: perform following ops on bcp-test
*** #3: once all is tested and working, repeat on production
** Merge to main
** COMMENT Database changes
*** Schema changes
*** Reports changes
**** DELETE FROM Report;
**** Add the entirety of reports.sql: `.read reports.sql`
*** Install new software
*** Install latest node packages: npm update ; npm install
** Run new software